main-modal-add.v1

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -15,6 +15,12 @@
     margin: 15px;
 }
 
+.modal-img {
+    height: 100%;
+    width: 100%;
+    margin: 15px;
+}
+
 
 #StoreSpotter-icon {
     height: 40px;
