--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -19,6 +19,27 @@
 </head>
 <body>
 <div th:replace="header :: header"></div>
+
+<div class="modal" id="myModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">사용법</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <img class="modal-img" id="StoreSpotter-icon" src="/css/img/main/main-info-modal.png" alt="store spotter" ./>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id = "modal-today-close">today</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="modal-overlay"></div>
 <div id="modal">
     <div class="main">
