--- a/src/main/resources/static/css/index/index.css
+++ b/src/main/resources/static/css/index/index.css
@@ -16,6 +16,12 @@ html, body {
     position: absolute;
 }
 
+.modal-img {
+    height: 100%;
+    width: 100%;
+    margin: 15px;
+}
+
 #map {
     width: 100%;
     height: 100%;
