--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -137,6 +137,7 @@
 <script src="/js/header.js"></script>
 <script src="/js/index/index_naverMapSearchApi.js"></script>
 <script th:inline="javascript" src="/js/index/index_sidebarButton.js"></script>
+<script src="/js/index/index_modal.js"></script>
 <script src="/js/mypage/myStored.js"></script>
 </body>
 </html>
