--- a/src/main/resources/static/css/index/index.css
+++ b/src/main/resources/static/css/index/index.css
@@ -10,16 +10,43 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-items: start;
-
+    max-width: 100%;
     height: 90%;
     width: 100%;
     position: absolute;
 }
 
-.modal-img {
-    height: 100%;
+/*모달 팝업 영역 스타일링*/
+.modal {
+    /*팝업 배경*/
+    display: block;
+    position: absolute;
+    top:0;
+    left: 0;
     width: 100%;
-    margin: 15px;
+    height: 100vh;
+    overflow: hidden;
+    background: rgba(0,0,0,0.5);
+}
+.modal .modal_popup {
+    /*팝업*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background: #ffffff;
+    border-radius: 20px;
+}
+.modal .modal_popup .close_btn {
+    display: block;
+    padding: 10px 20px;
+    background-color: rgb(116, 0, 0);
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    transition: box-shadow 0.2s;
 }
 
 #map {
