--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -21,8 +21,8 @@
 <body>
 <div th:replace="header :: header"></div>
 
-<div class="modal">
-    <div class="modal_popup">
+<div class="info-modal">
+    <div class="info-modal_popup">
         <img class="modal-img" id="StoreSpotter-icon" src="/css/img/main/main-info-modal.png" alt="store spotter">
         <button type="button" class="close_btn">닫기</button>
         <button id="modal-today-close" type="button">24시간 안보기</button>
