--- a/src/main/resources/static/css/index/index.css
+++ b/src/main/resources/static/css/index/index.css
@@ -20,7 +20,7 @@ html, body {
 .info-modal {
     /*팝업 배경*/
     z-index: 999;
-    display: none;
+    display: block;
     position: absolute;
     top:0;
     left: 0;
@@ -40,7 +40,10 @@ html, body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
+    padding-top: 10px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
     background: #ffffff;
     border-radius: 20px;
 }
