--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -24,8 +24,10 @@
 <div class="info-modal">
     <div class="info-modal_popup">
         <img class="modal-img" id="modal-info-icon" src="/css/img/main/main-info-modal.png" alt="store spotter">
-        <button type="button" class="close_btn">닫기</button>
-        <button id="modal-today-close" type="button">24시간 안보기</button>
+        <div>
+            <button type="button" class="close_btn">닫기</button>
+            <button id="modal-today-close" type="button">24시간 안보기</button>
+        </div>
     </div>
 </div>
 
