main-modal-add.v15

--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -24,9 +24,9 @@
 <div class="info-modal">
     <div class="info-modal_popup">
         <img class="modal-img" id="modal-info-icon" src="/css/img/main/main-info-modal.png" alt="store spotter">
-        <div>
+        <div class="info-modal-btn">
             <button type="button" class="close_btn">닫기</button>
-            <button id="modal-today-close" type="button">24시간 안보기</button>
+            <button id="modal-today-close" class="modal-today-close" type="button">24시간 안보기</button>
         </div>
     </div>
 </div>
