--- a/src/main/resources/static/css/index/index.css
+++ b/src/main/resources/static/css/index/index.css
@@ -47,7 +47,7 @@ html, body {
     background: #ffffff;
     border-radius: 20px;
 }
-.info-modal .info-modal_popup .close_btn {
+.info-modal .info-modal_popup .close_btn .modal-today-close {
     display: block;
     padding: 10px 20px;
     background-color: rgb(116, 0, 0);
@@ -56,6 +56,11 @@ html, body {
     color: #fff;
     cursor: pointer;
     transition: box-shadow 0.2s;
+}
+
+.info-modal-btn{
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 #modal-info-icon{
